--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/builtin-user-mgmt-secrets-tab-2.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/builtin-user-mgmt-secrets-tab-2.adoc
@@ -1,6 +1,6 @@
 = builtin-user-mgmt-secrets.yaml
 
-== Chart Version: {tab_2_tab_text}
+== Chart Version: {helm_tab_2_tab_text}
 
 // Note that this page is created because when the contents of the included yaml is big, the tab size would be too high and not comfortable to read.
 
