--- a/modules/ROOT/pages/deployment/services/tls.adoc
+++ b/modules/ROOT/pages/deployment/services/tls.adoc
@@ -1,14 +1,7 @@
 = Transport Layer Security (TLS)
-:toc: macro
+:toc: right
 
 :description: TLS is important to secure communication between parties. Infinite Scale provides TLS for internal communication and also for communication with users or services which are not provided by Infinite Scale. 
-
-include::partial$deployment/services/beta-statement.adoc[]
-
-// remove the remark to get the toc rendered if there are more than one headlines
-{empty} +
-
-toc::[]
 
 == Introduction
 
