--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/val-desc-tab-1.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/val-desc-tab-1.adoc
@@ -1,6 +1,6 @@
 = values.yaml Description
 
-== Chart Version: {tab_1_tab_text}
+== Chart Version: {helm_tab_1_tab_text}
 
 ////
 Note that this page is created because when the contents of the included table is big, the tab size would be too high and not comfortable to read.
