--- a/modules/ROOT/pages/deployment/services/gateways.adoc
+++ b/modules/ROOT/pages/deployment/services/gateways.adoc
@@ -1,14 +1,7 @@
 = Gateways
-:toc: macro
+:toc: right
 
 :description: There is more than one service providing API gateway functionalities. The following explanation helps sorting things out.
-
-include::partial$deployment/services/beta-statement.adoc[]
-
-// remove the remark to get the toc rendered if there are more than one headlines
-{empty} +
-
-toc::[]
 
 == Introduction
 
