--- a/modules/ROOT/pages/deployment/services/s-list/groups.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/groups.adoc
@@ -3,15 +3,13 @@
 
 :ext_name: groups
 
-:description: The Infinite Scale Group service provides ...
+:description: The Infinite Scale Group service provides
 
 == Introduction
 
 {description}
 
 // fixme: source description is still missing, and a better description is needed
-
-include::partial$deployment/services/beta-statement.adoc[]
 
 == Configuration
 
