--- a/modules/ROOT/pages/deployment/services/s-list/idp.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/idp.adoc
@@ -3,15 +3,13 @@
 
 :ext_name: idp
 
-:description: The Infinite Scale IDP service provides ...
+:description: The Infinite Scale IDP service
 
 == Introduction
 
 {description}
 
 // fixme: source description is still missing, and a better description is needed
-
-include::partial$deployment/services/beta-statement.adoc[]
 
 == Configuration
 
