--- a/modules/ROOT/pages/deployment/services/s-list/storage-system.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-system.adoc
@@ -3,15 +3,13 @@
 
 :ext_name: storage-system
 
-:description: The Infinite Scale Storage-System service provides ...
+:description: The Infinite Scale Storage-System
 
 == Introduction
 
 {description}
 
 // fixme: source description is still missing, and a better description is needed
-
-include::partial$deployment/services/beta-statement.adoc[]
 
 == Configuration
 
