--- a/modules/ROOT/pages/deployment/binary/binary-setup.adoc
+++ b/modules/ROOT/pages/deployment/binary/binary-setup.adoc
@@ -19,13 +19,13 @@ NOTE: Infinite Scale by default relies on Multicast DNS (mDNS), usually via `ava
 
 == Installation
 
-* To get the stable binary from ownCloud, visit {ocis-downloadpage-url}?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file. Check the sort order on the modification date to get the most recent releases on top. Depending on your system and preferences, you may want to save the binary in `/usr/bin/`
+* To get the stable binary from ownCloud, visit {ocis-downloadpage-url}?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file. Check the sort order on the modification date to get the most recent releases on top. Depending on your system and preferences, you may want to save the binary in `/usr/local/bin/`
 +
 To download use:
 +
 [source,bash]
 ----
-sudo wget -O /usr/local/bin/ocis <link>
+sudo wget -O /usr/local/bin/ocis <file_url>
 ----
 +
 Make the binary executable with:
