--- a/modules/ROOT/pages/prerequisites/prerequisites.adoc
+++ b/modules/ROOT/pages/prerequisites/prerequisites.adoc
@@ -388,20 +388,23 @@ Ceph Notes::
 * Note that you cannot access the same files in CephFS and Ceph-S3. Ceph allows exposing commodity hardware as either blockstorage (RBD), S3 or CephFS. It is not possible to write a file via S3 and then read it via CephFS.
 ====
 
-== Compatible Clients
+== Compatible Apps and Clients
 
-The mobile clients and the desktop client work just like with ownCloud server when connected to Infinite Scale if used in their current versions. This means that users can access and synchronize their home folder and received shares, but spaces are not available. Supported versions are:
+At the moment, spaces are supported with the new ownCloud Web interface and the Desktop app version 3.0.
 
-* Desktop app version 2.11
-* iOS app version 11.10
+* Web (embedded in Infinite Scale)
+* Desktop app 3.0
+
+The mobile apps currently do not support spaces but work just like with ownCloud Server when connected to Infinite Scale if used in their current versions. This means that users can access and synchronize their home folder and received shares. Supported versions without spaces are:
+
+* iOS app version 11.11
 * Android app version 2.21
 
-At the moment, only the new ownCloud Web interface offers spaces. Spaces will be available in the following upcoming client versions:
+Spaces for the mobile apps will be available in the following upcoming versions:
 
-* Desktop app 3.0
 * iOS app 12.0
 * Android app 4.0
 
-Pre-release versions for https://owncloud.com/beta-testing/#desktop-beta[Desktop],  https://owncloud.com/beta-testing/#ios[iOS] and https://owncloud.com/beta-testing/#android[Android] are already available for testing.
+Pre-release versions for https://owncloud.com/beta-testing/#ios[iOS] and https://owncloud.com/beta-testing/#android[Android] are already available for testing.
 
 
