--- a/modules/ROOT/pages/deployment/services/s-list/idm.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/idm.adoc
@@ -23,7 +23,7 @@ The IDM service is limited in its functionality:
 namely `BIND`, `SEARCH`, `ADD`, `MODIFY` and `DELETE`.
 * IDM currently does not do any LDAP schema verification like +
 `structural vs. auxiliary object classes`, `require and option attributes`, `syntax checks`, …
-* Therefore the IDM service is not meant to be or replacing a general purpose LDAP server.
+* Therefore the IDM service is not meant to replace a general purpose LDAP server.
 ====
 
 == Default Values
