--- a/modules/ROOT/pages/deployment/general/ocis-init.adoc
+++ b/modules/ROOT/pages/deployment/general/ocis-init.adoc
@@ -13,11 +13,11 @@ In general, the xref:deployment/general/general-info.adoc#initialize-infinite-sc
 * When using the xref:deployment/binary/binary-setup.adoc[Binary Setup], the command *is recommended* to be run manually once before first usage, though you can also fully configure the initial setup manually.
 +
 --
-When running `ocis init`, a random admin password will be printed to the shell for first login. Though the password can be changed afterwards in the UI, it is possible to define it right from the start when initializing:
+When running `ocis init`, a random admin password will be printed to the shell for first login. Though the password can be changed afterwards in the UI, it is possible to define it right from the start when initializing, the password below is just an example:
 
 [source,bash]
 ----
-IDM_ADMIN_PASSWORD=admin \
+IDM_ADMIN_PASSWORD=jvQN4XW2q&bjPAj7 \
 ocis init
 ----
 --
