--- a/modules/ROOT/partials/deployment/nginx_harden_ssl.adoc
+++ b/modules/ROOT/partials/deployment/nginx_harden_ssl.adoc
@@ -4,11 +4,14 @@
         # and ssl cache is handled by certbot
 
         # restrict ciphers
-        ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !SHA1 !SHA256 !SHA384 !RC4 !aNULL !eNULL !Medium !LOW !3DES !MD5 !EXP !PSK !SRP !DSS !SEED";
+        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA:ECDHE-ECDSA-AES128-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA256:!SHA1:!SHA256:!SHA384:!RC4:!aNULL:!eNULL:!Medium:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS:!SEED";
 
-        # use multiple curves.
+        # use multiple curves  (only if dhparams file is used)
         ssl_ecdh_curve secp521r1:secp384r1;
 
         # reduce time to first byte
         ssl_buffer_size 4k;
+
+        # add strict transport security
+        add_header Strict-Transport-Security "max-age=15768000; must-revalidate; includeSubDomains; preload;" always;
 ----
