--- a/modules/ROOT/pages/deployment/services/deployment-considerations.adoc
+++ b/modules/ROOT/pages/deployment/services/deployment-considerations.adoc
@@ -4,7 +4,7 @@
 :nats-clustering-url: https://docs.nats.io/running-a-nats-service/configuration/clustering
 :nats-helm-url: https://docs.nats.io/running-a-nats-service/nats-kubernetes/helm-chart
 
-:description: When using container orchestration, some considerations should be taken when deploying services with respect to scaling.
+:description: When using container orchestration, some considerations should be taken into account when deploying services with respect to scaling.
 
 == Introduction
 
