--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -15,8 +15,9 @@
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:deployment/services/services.adoc[Services]
 **** General Information
-***** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
 ***** xref:deployment/services/deployment-considerations.adoc[Deployment Considerations]
+***** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
+***** xref:deployment/services/env-vars-special-scope.adoc[Environment Variables with Special Scope]
 ***** xref:deployment/services/gateways.adoc[Gateways]
 ***** xref:deployment/services/logging.adoc[Logging]
 ***** xref:deployment/services/ports-used.adoc[Ports Used]
